--- a/project/public/css/main.css
+++ b/project/public/css/main.css
@@ -1482,3 +1482,60 @@ main {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
+
+
+/** Для обработки ошибок **/
+.toast-container {
+  position: fixed;
+  z-index: 1000;
+  top: 20%;
+  right: 0;
+  left: 0;
+  margin: auto;
+  padding-top: 0.4em;
+  padding-left: 0.4em;
+  width: 700px;
+  height: 0;
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.5;
+  box-sizing: border-box;
+}
+
+.toast-item {
+  display: block;
+  margin-bottom: 0.4em;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  border: 2px solid rgba(176, 0, 0, 0.8);
+  border-radius: 0.4em;
+}
+
+@keyframes shake {
+  0%,
+  100% {
+      transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+      transform: translateX(-5px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+      transform: translateX(5px);
+  }
+}
+
+.shake {
+  animation: shake 0.6s;
+}
